--- a/src/assets/css/homePage.css
+++ b/src/assets/css/homePage.css
@@ -5,8 +5,7 @@
     position: relative;
     height: 100vh;
     width: 100vw;
-    max-height: 100vh;
-    max-width: 100vw;
+  
 
 }
 
@@ -16,10 +15,11 @@
     position: absolute;
     top: 0;
     height: 100vh;
-    width: 35%;
+    width: 30%;
     right: 0;
     background-color: black;
     z-index: 10;
+
 }
 
 
@@ -35,3 +35,6 @@
 }
 
 
+.heroSection .container .icons li a ion-icon {
+    font-size: 1.5em;
+}
