--- a/src/assets/css/homePage.css
+++ b/src/assets/css/homePage.css
@@ -1,11 +1,9 @@
-
-
 .heroSection {
     background-color: var(--color-blanco);
     position: relative;
     height: 100vh;
     width: 100vw;
-  
+
 
 }
 
@@ -19,6 +17,8 @@
     right: 0;
     background-color: black;
     z-index: 10;
+    animation: slideWidth 1s ease-in-out forwards;
+    
 
 }
 
@@ -26,7 +26,7 @@
 .heroSection .container {
     height: 100vh;
 
-    
+
 }
 
 
@@ -37,4 +37,53 @@
 
 .heroSection .container .icons li a ion-icon {
     font-size: 1.5em;
+}
+
+
+.heroSection .text-blend {
+    color: black;
+}
+
+.heroSection .text-blendBottom{
+    color: hsl(0, 0%, 11%)
+}
+
+
+@media screen and (max-width: 760px) {
+    @keyframes slideWidth {
+        from {
+          width: 30%;
+        }
+        to {
+          width: 100%;
+        }
+      }
+
+      .heroSection .text-blend {
+        color: var(--color-blanco);
+    
+    }
+
+    .heroSection .text-blendBottom{
+        color: var(--color-blanco)
+    }
+
+
+    .heroSection .text-blendGradient {
+        background: linear-gradient(0deg, rgba(73,118,237,1) 25%, rgba(246,246,246,1) 100%);
+        background-clip: text;
+    }
+
+}
+
+
+@media screen and (width > 200px) {
+
+    .heroSection .text-blend {
+        mix-blend-mode: difference;
+    }
+
+
+
+
 }
