--- a/src/index.css
+++ b/src/index.css
@@ -8,4 +8,41 @@
   --color-celeste: #4976ED;
   --color-blanco: #F6F6F6;
   background-color: var(--color-blanco);
+  
+}
+
+* {
+  scrollbar-width: thin;
+  scrollbar-color: #A48BD1 #A48BD1;
+}
+
+/* Chrome, Edge and Safari */
+*::-webkit-scrollbar {
+  width: 5px;
+  width: 5px;
+}
+*::-webkit-scrollbar-track {
+  border-radius: 9px;
+  background-color: #A48BD1;
+}
+
+*::-webkit-scrollbar-track:hover {
+  background-color: #4976ED;
+}
+
+*::-webkit-scrollbar-track:active {
+  background-color: #A48BD1;
+}
+
+*::-webkit-scrollbar-thumb {
+  border-radius: 4px;
+  background-color: #A48BD1;
+}
+
+*::-webkit-scrollbar-thumb:hover {
+  background-color: #4976ED;
+}
+
+*::-webkit-scrollbar-thumb:active {
+  background-color: #A48BD1;
 }
