--- a/src/assets/css/form.css
+++ b/src/assets/css/form.css
@@ -1,11 +1,26 @@
 .formSection {
     width: 100vw;
+    
+}
+
+.box-skew {
+    background-color: black;
+    height: 80px;
+    width: 240px;
+    position: fixed;
+    right: 0;
+    top: 0;
+    border-radius: 0px 0px 0px 5px;
+    animation: boxSkew infinite ease-in-out 2s;
+    z-index: 20;
 }
 
 .formSection .faq {
     width: 600px;
 
     height: 600px;
+    z-index: 15;
+   
 }
 
 
@@ -15,6 +30,8 @@
     flex-direction: column;
     justify-content: start;
     height: 600px;
+    z-index: 10;
+
     
 }
 
@@ -27,11 +44,84 @@
 
 
 
+
+@keyframes boxSkew {
+    0% {
+        background-color: black;
+        width: 235px;
+    }
+    50%{
+        background-color: black;
+        width: 245px;
+    }
+    100% {
+        background-color: var(--color-morado);
+        width: 235px;
+    }
+}
+
+
+
+@media screen and (max-width : 760px) {
+
+    .box-skew {
+        
+        height: 70px;
+        border-radius: 0;
+        animation: forwards ease-in-out 2s boxSkew;
+    }
+
+    @keyframes boxSkew{
+        0%{
+            width: 0%;
+        }
+
+        25% {
+            width: 50%;
+        }
+        75%{
+            width: 75%;
+        }
+        100% {
+            background-color: black;
+            width: 100%;
+        }
+    }
+
+}
+
 @media screen and (max-width: 500px) {
     .formSection .faq, .formSection .data {
-        width: 350px;
+        width: 100%;
         height: 400px;
         
+        
     }
+
+    .formSection .data .btn {
+        margin: auto;
+        margin-bottom: 10px;
+       
+    }
+
+    
     
 }
+
+
+@media screen and (max-width: 450px) {
+    .formSection .formularioPlan > div, .formSection .formularioPlan > div {
+        width: 100%;
+        
+        
+    }
+
+
+    .formSection .faq{
+        margin-top: 0px;
+    }
+
+    
+    
+}
+
