--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+*{ 
+  box-sizing: border-box;
+}
+
+
+
 #root {
   max-width: 1550px;
 
@@ -28,11 +34,19 @@
 
 
 
+
+
+
+
 .fuenteHurme {
   font-family: 'Hurme Geometric';
   font-weight: bold;
   
 }
+
+
+
+
 
 
 .fuenteHurmeThin {
@@ -46,3 +60,4 @@
   font-weight: 400;
   
 }
+
