--- a/src/assets/css/contactPage.css
+++ b/src/assets/css/contactPage.css
@@ -27,9 +27,26 @@
 
 
 
-@media screen and (max-width: 1021px) {
+@media screen and (max-width: 1250px) {
+
+   
+
+
+    .heroSection .prices {
+        margin-top: 2%;
+        height: 800px;
+        margin-bottom: 20px;
+
+    }
 
     
+
+
+
+}
+
+
+@media screen and (max-width: 1021px) {
 
     .heroSection2::before,
     .heroSection2::after {
@@ -48,17 +65,18 @@
     .heroSection .prices {
         margin-top: 2%;
         height: 1500px;
+        margin-bottom: 20px;
 
     }
 
     .heroSection .card {
         height: 400px;
-        width: 75%;
+        
         min-height: 550px;
     }
 
     .heroSection .card-middle {
-        height: 50vh;
+       
         position: relative;
         bottom: 0;
     }
@@ -124,6 +142,7 @@
     transform: translateX(-400%);
     animation: slideHeaders 2s ease-in-out forwards;
     opacity: 0;
+    
 }
 
 
