--- a/src/assets/css/homePage.css
+++ b/src/assets/css/homePage.css
@@ -24,6 +24,7 @@
     z-index: 10;
     animation: slideWidth 1s ease-in-out forwards;
     
+    
 
 
 }
@@ -154,6 +155,7 @@
         width: 100%;
         z-index: 10;
         margin-bottom: 20px;
+        overflow-y: scroll;
 
     }
 
